[gd_scene load_steps=8 format=3 uid="uid://crigorfev5d33"]

[ext_resource type="Texture2D" uid="uid://d3imbwbapauk6" path="res://assets/GameBg.png" id="1_vikt7"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_wdnb0"]
[ext_resource type="PackedScene" uid="uid://b7u02sl5blmkt" path="res://scenes/gem/gem.tscn" id="2_t20gq"]
[ext_resource type="PackedScene" uid="uid://bd8354wnfoba2" path="res://scenes/paddle/paddle.tscn" id="3_82i5o"]
[ext_resource type="Script" path="res://scenes/game/gem_spawner.gd" id="4_xbpms"]
[ext_resource type="AudioStream" uid="uid://b7lm16s7y2dll" path="res://assets/bgm_action_5.mp3" id="6_elvad"]
[ext_resource type="AudioStream" uid="uid://3qw5iugi1wj0" path="res://assets/spell1_0.wav" id="7_qj7wi"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wdnb0")
gem_scene = ExtResource("2_t20gq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 324)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_vikt7")

[node name="Paddle" parent="." instance=ExtResource("3_82i5o")]
position = Vector2(551, 604)
paddleSpeed = 1000.0

[node name="GemSpawner" type="Timer" parent="."]
autostart = true
script = ExtResource("4_xbpms")

[node name="Score" type="Label" parent="."]
offset_right = 103.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 48
text = "00000"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_elvad")
volume_db = -17.542
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qj7wi")
volume_db = -10.024

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="GemSpawner" to="." method="_on_gem_spawner_timeout"]
[connection signal="timeout" from="GemSpawner" to="GemSpawner" method="_on_timeout"]
